log
Tue 14 May 2024 01:48:35 PM UTC: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
778061a
Tue 14 May 2024 01:54:29 PM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
8efa8ec
Tue 14 May 2024 01:55:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a6192a9
Tue 14 May 2024 02:00:18 PM UTC: 
 sudoku.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
6a35838
Tue 14 May 2024 02:00:56 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
9f29d42
Tue 14 May 2024 02:01:04 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
865b64c
Tue 14 May 2024 02:02:40 PM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
14b87fe
Tue 14 May 2024 02:09:51 PM UTC: 
 sudoku.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
973b0d5
Tue 14 May 2024 02:11:09 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 20/70
59ed1ca
Tue 14 May 2024 02:11:25 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
5a5356a
Tue 14 May 2024 02:13:44 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:82:57: error: expected ‘)’ before ‘;’ token
   82 |                   Node* adj = malloc((Node*)sizeof(Node);
      |                                     ~                   ^
      |                                                         )
sudoku.c:82:38: error: passing argument 1 of ‘malloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   82 |                   Node* adj = malloc((Node*)sizeof(Node);
      |                                      ^~~~~~~~~~~~~~~~~~~
      |                                      |
      |                                      Node *
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘Node *’
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |                      ~~~~~~~^~~~~~
In file included from test.c:5:
sudoku.c:87:16: error: expected ‘,’ or ‘;’ before ‘}’ token
   87 |                }
      |                ^
sudoku.c:82:25: error: unused variable ‘adj’ [-Werror=unused-variable]
   82 |                   Node* adj = malloc((Node*)sizeof(Node);
      |                         ^~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
be383bf
Tue 14 May 2024 02:14:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
d349bef
Tue 14 May 2024 02:23:30 PM UTC: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
411cbf2
Tue 14 May 2024 02:27:25 PM UTC: 
 sudoku.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
f637699
Tue 14 May 2024 02:29:27 PM UTC: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
154a6b1
Tue 14 May 2024 02:34:29 PM UTC: 
 sudoku.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
19e798b
Tue 14 May 2024 02:34:40 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
33a17f6
Tue 14 May 2024 02:37:10 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 0/70
c58424b
Tue 14 May 2024 02:41:55 PM UTC: 
 sudoku.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
2c0c5cc
Tue 14 May 2024 02:43:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6fad507
Tue 14 May 2024 02:47:49 PM UTC: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
1f60348
Tue 14 May 2024 03:05:58 PM UTC: 
 sudoku.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
5704428
Thu 16 May 2024 11:41:34 PM UTC: 
 tests:  6|2
total_score: 45/70
8f039d9
Thu 16 May 2024 11:42:06 PM UTC: 
 sudoku.c | 13 -------------
 1 file changed, 13 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bb24109
Thu 16 May 2024 11:46:42 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9160355
Thu 16 May 2024 11:48:01 PM UTC: 
 sudoku.c | 28 +++++++++++++---------------
 1 file changed, 13 insertions(+), 15 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8114418
Thu 16 May 2024 11:49:02 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
79b4771
Thu 16 May 2024 11:52:54 PM UTC: 
 sudoku.c | 34 +++++++---------------------------
 1 file changed, 7 insertions(+), 27 deletions(-)
 tests:  6|2
total_score: 45/70
79b4771
Thu 16 May 2024 11:57:30 PM UTC: 
 sudoku.c | 31 +++++++++++++++++++------------
 1 file changed, 19 insertions(+), 12 deletions(-)
 tests:  6|2
total_score: 45/70
5ac50ef
Thu 16 May 2024 11:58:57 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
40c3a59
